objects/EGPTConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>AssistantUnknownAnswerResponse__c</fullName>
        <label>Unknown Answer Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesFeaturedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Featured Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EinsteinGPT Configuration</relationshipLabel>
        <relationshipName>EinsteinGPT_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesUseOpenAI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Open AI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceAgentName__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCaseSummary__c</fullName>
        <label>Case Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ServiceContactAvatar__c</fullName>
        <label>Contact Avatar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServiceContactInitials__c</fullName>
        <label>Contact Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ServiceKnowledgeArticleContent__c</fullName>
        <label>Knowledge Article Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ServiceKnowledgeArticleTitle__c</fullName>
        <label>Knowledge Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceStartingMessage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Starting Message</label>
        <referenceTo>ChatResponse__c</referenceTo>
        <relationshipLabel>EinsteinGPT Configuration</relationshipLabel>
        <relationshipName>EinsteinGPT_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceUseAvatar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Avatar</label>
        <type>Checkbox</type>
    </fields>
    <label>EinsteinGPT Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EinsteinGPT Demo Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EinsteinGPT Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>